[tool.poetry]
name = "reasonableinsistentnaturallanguage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudscraper = "^1.2"
yarl = "^1.4"
aiohttp = "^3.6"
bs4 = "^0.0.1"
dnspython = "^1.16"
htmlparser = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
